# inutils

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  pytest.ini
inutils/: __init__.py  timer.py
tests/: test_inutils.py  test_timer.py
