[tool.poetry]
name = "inutils"
version = "0.1.3"
description = "INternational UTILS - random utilities"
authors = ["Luiz Menezes <luiz.menezesf@gmail.com>"]
license = "MIT"
repository = ""
homepage = ""

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pre-commit = "^2.2.0"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
flake8 = "^3.8.1"
ipdb = "^0.13.2"

[tool.black]
line-length = 110

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
known_localfolder = "inutils,tests"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
